# Epoch-of-Elria

./: .gitignore  ArchReactorAIlogic.rs  BUILD_INSTRUCTIONS.md  BuildAndRun.bat  CLICommands.rs  Cargo.toml  DREAM_WEAVER_README.md  DreamWeaverCharacters.h  EpochOfElriaEngine  EpochOfElriaEngine.html  GAME_DEMO_OUTPUT.txt  GAME_WALKTHROUGH.md  GameEnvironment.cpp  GameEnvironment.h  GameObject.cpp  GameObject.h  GameObject3D.cpp  GameObject3D.h  Makefile  MemorySystem.h  Meta-CognitionLayer.rs  NarrativeCombat.h  README.md  RPGCharacter.h  RealityManipulation.h  SimpleMemorySystem.h  Start  Start.bat  TheOneAntagonist.h  Vector2D.cpp  Vector2D.h  Vector3D.h  World3D.h  build_and_run.bat  build_and_run.ps1  build_windowed_games.sh  compile_interactive.sh  config.toml  create_windowed_app.cpp  dream_weaver_complete  (+50 more)
CGX/: .gitignore  README.md  package-lock.json  package.json  tasks.json  tsconfig.json
epoch-of-elria/: BUILD_INSTRUCTIONS.md  CLICommands.rs  Cargo.toml  GAME_WALKTHROUGH.md  GameEnvironment.cpp  MemorySystem.h  SimpleMemorySystem.h  Start  Start.bat  TheOneAntagonist.h  Vector2D.h  build_and_run.ps1  create_windowed_app.cpp  earth_sphere_game  game_engine_parallel_demo  game_engine_simple_graphics  game_svg_demo  game_walkable_simple  graphics.cpp  linux_windowed_engine.cpp  main.cpp  main_3d_earth_sphere.cpp  main_interactive.cpp  main_memory_system.cpp  main_reality_manipulation.cpp  main_simple_graphics.cpp  main_simple_memory.cpp  moderation_config.toml  narrative_combat  rpg_characters  run_engine.bat  run_engine.sh  sdl_sandbox_game_fallback  (+13 more)
(+92 files in other folders)
